<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment"
        app:enterAnim="@android:anim/fade_in"
        app:exitAnim="@android:anim/fade_out"
        app:popEnterAnim="@android:anim/fade_in"
        app:popExitAnim="@android:anim/fade_out"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />

    <action
        android:id="@+id/action_global_homeFragment"
        app:destination="@id/homeFragment"
        app:enterAnim="@android:anim/fade_in"
        app:exitAnim="@android:anim/fade_out"
        app:popEnterAnim="@android:anim/fade_in"
        app:popExitAnim="@android:anim/fade_out"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.exam.storyapp.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment"
            app:enterAnim="@anim/enter_end"
            app:exitAnim="@anim/exit_start"
            app:popEnterAnim="@anim/enter_start"
            app:popExitAnim="@anim/exit_end" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.exam.storyapp.ui.register.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.exam.storyapp.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_add"
            app:destination="@id/createStoryFragment" />

        <action
            android:id="@+id/action_home_to_detail"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/createStoryFragment"
        android:name="com.exam.storyapp.ui.create.CreateStoryFragment"
        android:label="@string/create_new"
        tools:layout="@layout/fragment_create_story">
        <action
            android:id="@+id/action_addStory_to_cameraFragment"
            app:destination="@id/cameraFragment"
            app:enterAnim="@anim/enter_end"
            app:exitAnim="@anim/exit_start"
            app:popEnterAnim="@anim/enter_start"
            app:popExitAnim="@anim/exit_end" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.exam.storyapp.ui.detail.DetailStoryFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail_story">
        <argument
            android:name="story"
            app:argType="com.exam.storyapp.domain.model.Story" />
    </fragment>

    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.exam.storyapp.ui.camera.CameraFragment"
        android:label="fragment_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/storiesMapsFragment"
        android:name="com.exam.storyapp.ui.listMap.StoriesMapsFragment"
        android:label="@string/location">
        <action
            android:id="@+id/action_storiesMaps_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>


</navigation>
