...
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:placeholderText="@string/email_placeholder"
        app:startIconDrawable="@drawable/ic_email">

        <com.exam.storyapp.common.view.EmailInputEditTextEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dim_8"
        android:alpha="0"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="@id/lay_email"
        app:layout_constraintStart_toStartOf="@id/lay_email"
        app:layout_constraintTop_toBottomOf="@id/lay_email"
        app:placeholderText="@string/password_placeholder"
        app:startIconDrawable="@drawable/ic_password">

        <com.exam.storyapp.common.view.PasswordInputEditTextEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.exam.storyapp.common.view.LoadingButton
...
