<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:transitionName="@string/add_story_transition"
    tools:context=".ui.create.CreateStoryFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarDetail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toTopOf="@id/lay_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/create_new"
        app:titleCentered="true">

        <com.exam.storyapp.common.view.LoadingButton
            android:id="@+id/button_add"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/dim_8"
            android:contentDescription="@string/send_story"
            android:enabled="false"
            android:focusable="true"
            app:icon="@drawable/ic_send" />
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_description"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dim_8"
        android:focusable="true"
        android:hint="@string/create_new"
        app:layout_constraintBottom_toTopOf="@id/lay_share_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarDetail"
        app:placeholderText="@string/write_story">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="10"
            android:scrollbars="vertical" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lay_share_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:maxHeight="?attr/actionBarSize"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dim_8"
        app:layout_constraintBottom_toTopOf="@id/add_image_chooser"
        app:layout_constraintEnd_toEndOf="@id/lay_description"
        app:layout_constraintStart_toStartOf="@id/lay_description"
        app:layout_constraintTop_toBottomOf="@id/lay_description">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/location"
            android:src="@drawable/ic_location"
            app:tint="?attr/colorPrimary" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_share_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_8"
            android:layout_weight="1"
            android:text="@string/location_share"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_image_chooser"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dim_8"
        android:layout_marginVertical="@dimen/dim_8"
        android:gravity="start"
        android:text="@string/add_an_image"
        android:textSize="16sp"
        app:cornerRadius="@dimen/dim_0"
        app:icon="@drawable/ic_add_photo"
        app:iconPadding="@dimen/dim_8"
        app:iconSize="@dimen/dim_24"
        app:layout_constraintBottom_toTopOf="@id/preview_image"
        app:layout_constraintEnd_toEndOf="@id/lay_share_location"
        app:layout_constraintStart_toStartOf="@id/lay_share_location"
        app:layout_constraintTop_toBottomOf="@id/lay_share_location" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/preview_image"
        android:layout_width="@dimen/dim_0"
        android:layout_height="@dimen/dim_0"
        android:layout_marginHorizontal="@dimen/dim_16"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_image_chooser" />
</androidx.constraintlayout.widget.ConstraintLayout>
