<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="@string/story_card_detail_transition_name"
    tools:context=".ui.detail.DetailStoryFragment">

    <com.google.android.material.imageview.ShapeableImageView
...
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_16"
        android:contentDescription="@string/back"
        app:icon="@drawable/ic_close"
        app:layout_constraintEnd_toStartOf="@id/tv_detail_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_detail_name"
        style="@style/TextAppearance.Material3.ActionBar.Title"
...
